--- a/src/styles/CHANGELOG
+++ b/src/styles/CHANGELOG
@@ -2,7 +2,10 @@
 
 Keep a changelog. https://keepachangelog.com/en/1.0.0/
 
-## 0.3.3
+## 0.4.0
+- Added `input` component styles. (_sebastian.busek_)
+
+## 0.3.0
 - Added button styles. (_sebastian.busek_)
 
 ## 0.2.0 - 0.2.2
