--- a/src/styles/CHANGELOG
+++ b/src/styles/CHANGELOG
@@ -4,6 +4,7 @@ Keep a changelog. https://keepachangelog.com/en/1.0.0/
 
 ## 0.4.0
 - Added shadows definition. (_sebastian.busek_)
+- Reworked button style definition. (_sebastian.busek_)
 - Added `input` component styles. (_sebastian.busek_)
 
 ## 0.3.0
