--- a/src/styles/CHANGELOG
+++ b/src/styles/CHANGELOG
@@ -2,6 +2,12 @@
 
 Keep a changelog. https://keepachangelog.com/en/1.0.0/
 
+## 0.6.0
+- Added `radio` component. (_sebastian.busek_)
+
+## 0.5.0
+- Added `checkbox` component. (_sebastian.busek_)
+
 ## 0.4.0
 - Added shadows definition. (_sebastian.busek_)
 - Reworked button style definition. (_sebastian.busek_)
